--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</script>
 		<title>ZapMath</title>
 	</head>
-	<body">
+	<body>
 		<div class="container">
 		<div class="box">
 			<img id="image1" src="bolt.png"><h1>ZapMath</h1><img id ="image2" src="bolt.png">
