--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		  ga('send', 'pageview');
 
 		</script>
-		<title>ZapMath</title>
+		<title>ZapMath | Fun Math Game</title>
 	</head>
 	<body>
 		<div class="container">
