--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<link rel="stylesheet" href = "css.css">
 		<link rel="icon" type="image/png" href="bolt.png">
+		<meta name="description" content="Race against the clock in this fast-paced math game, getting points for correct answers." />
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
