--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<title>ZapMath | Fun Math Game</title>
 	</head>
 	<body>
+		<div class = "link"><button>Back to HomePage</button></div>
 		<div class="container">
 		<div class="box">
 			<img id="image1" src="bolt.png"><h1>ZapMath</h1><img id ="image2" src="bolt.png">
