--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<title>ZapMath | Fun Math Game</title>
 	</head>
 	<body>
-		<a href = "www.deralrobison.com" class = "link">Back to HomePage</a>
+		<a href = "http://www.deralrobison.com/index.html" class = "link">Back to HomePage</a>
 		<div class="container">
 		<div class="box">
 			<img id="image1" src="bolt.png"><h1>ZapMath</h1><img id ="image2" src="bolt.png">
